# earth-observations

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-push.yaml  earth-observations.yaml
credentials/: access_token_credentials.py  auth.sh
docs/: README.md
eo-notebooks/: vars.env
eo-notebooks/.ipynb_checkpoints/: download_S3-checkpoint.py
notebooks/: download_S3.ipynb  download_S3_L1.ipynb  new_download.ipynb  process_S3_L1_to_L2.ipynb  process_S3_L2_to_L3.ipynb  vars.env
notebooks/.ipynb_checkpoints/: c2rcc_conf-checkpoint.json  download_S3-checkpoint.ipynb  download_S3_L1-checkpoint.ipynb  process_S3-checkpoint.ipynb  process_S3_L1_to_L2-checkpoint.ipynb  process_S3_L2_to_L3-checkpoint.ipynb
notebooks/ROI/: indre-oslofjord.geojson  oslofjord.geojson
notebooks/download/: sentinel_download.py
notebooks/stations/: stations_indre_oslofjord.csv
scripts/: Binning_S2.py  Binning_S3.py  Gjende.geojson  L3binning_32VNL_C2CRR.xml  README.md  S2MSI_s2resample_subset_idepix_c2rcc.xml  S3OLCI_subset_c2rcc.xml  S3OLCI_subset_idepix.xml  S3_L3binning_idepix_c2rcc.xml  SATINNDIR.yml  SIOS_buoy.geojson  coordinates_pixelExtraction.txt  copy_move_icor.py  downloadColhub_main.py  downloadFromColhub.py  downloadFromCreodias.py  merge_s3.py  newcolhub_download.py  pixelExtraction.py  pixelExtractionGraph.xml  process_S2.py  process_S3.py  process_progress.json  process_progress_s3.json  processing.py  progress.json  southernNorway.geojson  stations_koordinates_fullList_v1.txt  subset-all-process.py  util.py
(+36 files in other folders)
