[tool.poetry]
name = "earth-observations"
version = "0.1.0"
description = ""
authors = ["Andrea Merlina <ame@niva.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.6.*"
sentinelsat = "^1.2.1"
iprogress = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

